Added an "upload to cloud" parameter to the plugin
