# src/mescobrad_edge/controllers/plugins_controller.py
@@ -146,7 +146,7 @@ def upload_questionnaires_data(upload_file, trigger_anonymization):  # noqa: E50
     return None, 200
 
 
-def upload_mri_data(upload_mri_file, deface_method, trigger_anonymization):  # noqa: E501
+def upload_mri_data(upload_mri_file, deface_method, trigger_anonymization, upload_to_cloud):  # noqa: E501
     """Upload MRI data
 
     This API allows to upload MRI data. # noqa: E501
@@ -157,6 +157,8 @@ def upload_mri_data(upload_mri_file, deface_method, trigger_anonymization):  # n
     :type deface_method: str
     :param trigger_anonymization: Trigger MRI anonymization workflow
     :type trigger_anonymization: bool
+    :param upload_to_cloud: Upload defaced and anonymized MRI DICOM files.
+    :type upload_to_cloud: bool
 
     :rtype: None
     """
@@ -180,25 +182,45 @@ def upload_mri_data(upload_mri_file, deface_method, trigger_anonymization):  # n
                         region_name=config[PLUGIN_CONF_MAIN_SECTION]["OBJ_STORAGE_REGION"])
 
     # Upload data
-    obj_storage_bucket = config[PLUGIN_CONF_MAIN_SECTION]["OBJ_STORAGE_BUCKET_LOCAL"]
-    if s3.Bucket(obj_storage_bucket).creation_date is None:
-            s3.create_bucket(Bucket=obj_storage_bucket)
-    file_name = upload_mri_file.filename
-    obj_name = "mri_data/" + file_name
-    file_content = upload_mri_file.read()
-    s3.Bucket(obj_storage_bucket).upload_fileobj(BytesIO(file_content), obj_name, ExtraArgs={'ContentType': "application/zip"})
+    if trigger_anonymization:
+        obj_storage_bucket = config[PLUGIN_CONF_MAIN_SECTION]["OBJ_STORAGE_BUCKET_LOCAL"]
+
+        # Create a bucket if it is not created
+        if s3.Bucket(obj_storage_bucket).creation_date is None:
+                s3.create_bucket(Bucket=obj_storage_bucket)
+
+        # Before uploading a new file, empty the folder if it is not empty
+        objs = list(s3.Bucket(obj_storage_bucket).objects.filter(Prefix="mri_data/", Delimiter="/"))
+        if len(list(objs))>0:
+            for obj in objs:
+                s3.Bucket(obj_storage_bucket).objects.filter(Prefix=obj.key).delete()
+
+        # Upload a prvoided file
+        file_name = upload_mri_file.filename
+        filename = os.path.splitext(file_name)[0] + ".tmp.part"
+        obj_name = "mri_data/" + filename
+        file_content = upload_mri_file.read()
+        s3.Bucket(obj_storage_bucket).upload_fileobj(BytesIO(file_content), obj_name, ExtraArgs={'ContentType': "application/zip"})
 
     # start anonymization workflow
-    if trigger_anonymization:
+    if trigger_anonymization and not upload_to_cloud:
         if deface_method == "freesurfer":
             workflow_id = "MRI_freesurfer_anonymization_workflow"
         else:
             # TO DO - Extend this, when second deface method is added
             workflow_id = ""
+
         workflow_engine_singleton = WorkflowEngine()
         print(f"Request received.. executing workflow {workflow_id}")
         workflow_engine_singleton.execute_workflow(workflow_id=workflow_id)
-    return None, 200
+
+    elif trigger_anonymization and upload_to_cloud:
+        workflow_id = "MRI_anonymized_data_upload_to_cloud_workflow"
+
+        workflow_engine_singleton = WorkflowEngine()
+        print(f"Request received.. executing workflow {workflow_id}")
+        workflow_engine_singleton.execute_workflow(workflow_id=workflow_id)
+    return None, 202
 
 
 def upload_edf_data(upload_edf_file, trigger_anonymization):  # noqa: E501
